# surfcontext-cli

./: CLAUDE.md  CONTEXT.md  Cargo.toml  surfcontext.json
.claude/: docs  guides  skills
src/: build.rs  config.rs  init.rs  main.rs
src/sync/: cross_repo.rs  generate.rs  local.rs  mod.rs
surf-parse/: Cargo.toml  README.md
surf-parse-wasm/: Cargo.toml  demo.html
surf-parse-wasm/src/: lib.rs
surf-parse/src/: attrs.rs  blocks.rs  error.rs  icons.rs  inline.rs  lib.rs  parse.rs  render_html.rs  render_md.rs  render_term.rs  types.rs  validate.rs
surf-parse/tests/: integration.rs  properties.rs
tests/: build_integration.rs
tests/fixtures/: basic.surf  malformed.surf  nesting.surf  single.surf  site.surf  strategy-sample.surf
