[workspace]
members = [".", "surf-parse", "surf-parse-wasm"]
resolver = "3"

[package]
name = "surfcontext-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "CLI for the SurfContext/ARDS v3.0 standard"
repository = "https://github.com/cloudsurf-software/surfcontext-cli"

[[bin]]
name = "surf"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
walkdir = "2"
colored = "3"
surf-parse = { path = "surf-parse" }
notify = "7"
