[package]
name = "surf-parse"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Parser for the SurfDoc format — markdown superset with typed block directives"

[dependencies]
colored = "3"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
